--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@activewidgets/relay",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "ActiveWidgets Relay integration",
   "author": "ActiveWidgets SARL",
   "license": "MIT",
@@ -50,7 +50,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/activewidgets/relay.git"
+    "url": "https://github.com/activewidgets/relay.git"
   },
   "keywords": [
     "datagrid",
